# AKG

./: .gitignore  LICENSE  README.md
Lab1/: CMakeLists.txt  conanfile.py
Lab1/include/: Camera.hpp  FPSCounter.hpp  Logger.hpp  MainForm.hpp  Matrix.hpp  Model.hpp  Parser.hpp  Scene.hpp  ThreadPool.hpp
Lab1/src/: Bitmap.cpp  Camera.cpp  FPSCounter.cpp  MainForm.cpp  Matrix.cpp  Model.cpp  Parser.cpp  Scene.cpp  ThreadPool.cpp  main.cpp
Lab2/: CMakeLists.txt
Lab2/include/: Bitmap.hpp  Camera.hpp  Logger.hpp  Matrix.hpp  Model.hpp  Parser.hpp  Scene.hpp
Lab2/src/: Bitmap.cpp  Camera.cpp  Logger.cpp  MainForm.cpp  Matrix.cpp  Model.cpp  Parser.cpp  Scene.cpp  main.cpp
Lab3/: CMakeLists.txt
Lab3/include/: Bitmap.hpp  Camera.hpp  Color.hpp  MainForm.hpp  Matrix.hpp  Model.hpp  Parser.hpp  Point.hpp  Raster.hpp  Renderer.hpp  Scene.hpp
Lab3/src/: Bitmap.cpp  Camera.cpp  Color.cpp  FPSCounter.cpp  Logger.cpp  MainForm.cpp  Matrix.cpp  Model.cpp  Parser.cpp  Raster.cpp  Renderer.cpp  Scene.cpp
Lab4/: CMakeLists.txt  conanfile.py
Lab4/include/: Camera.hpp  Color.hpp  FPSCounter.hpp  MainForm.hpp  Matrix.hpp  Model.hpp  Parser.hpp  Point.hpp  Raster.hpp  Renderer.hpp  Scene.hpp
Lab4/src/: Camera.cpp  Color.cpp  FPSCounter.cpp  Logger.cpp  MainForm.cpp  Matrix.cpp  Model.cpp  Parser.cpp  Raster.cpp  Renderer.cpp  Scene.cpp
Lab5/: CMakeLists.txt  conanfile.py
Lab5/include/: Camera.hpp  FPSCounter.hpp  Logger.hpp  MainForm.hpp  Matrix.hpp  Parser.hpp  Point.hpp  Raster.hpp  Renderer.hpp  Scene.hpp
Lab5/src/: Camera.cpp  FPSCounter.cpp  Logger.cpp  MainForm.cpp  Matrix.cpp  Parser.cpp  Raster.cpp  Renderer.cpp  Scene.cpp
